--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<meta charset="ISO-8859-1">
 		<link rel="stylesheet" type="text/css" href="main.css">
 		<script src="principal.js"></script>
 		<script src="jquery-1.12.1.js"></script>
